Fixed issues with updating of groups and categories. Added test for updating category.
